--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,9 @@ dependencies {
   apt 'net.simonvt.schematic:schematic-compiler:0.6.3'
   compile 'net.simonvt.schematic:schematic:0.6.3'
   compile 'com.melnykov:floatingactionbutton:1.2.0'
+  compile 'com.android.support:cardview-v7:23.2.0'
   compile 'com.android.support:design:23.1.1'
+    compile 'com.diogobernardino:williamchart:2.2'
   compile('com.afollestad.material-dialogs:core:0.8.4.2@aar') {
     transitive = true
   }
