--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
   }
   dependencies {
     classpath 'com.neenbedankt.gradle.plugins:android-apt:1.2'
+    classpath 'com.android.tools.build:gradle:1.5.0'
     classpath 'com.google.gms:google-services:1.4.0-beta3'
 
 
